resources/manifes/cliente-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliente-service-service
spec:
  selector:
    app: cliente-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
