resources/manifes/cliente-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cliente-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.nuup.ninja
      http:
        paths:
          - path: /cliente-service
            pathType: Prefix
            backend:
              service:
                name: cliente-rest-service
                port:
                  number: 8080
